--- a/index.html
+++ b/index.html
@@ -3,160 +3,231 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🌸 Shri Krishna Bhajan Mandli 🌸</title>
+  <title>Shri Krishna Bhajan Mandli - Vasai Nalasopara Maharashtra</title>
+  <meta name="description" content="Shri Krishna Bhajan Mandli – Devotional group from Vasai Nalasopara, Maharashtra. Available for Bhajan Sandhya, Kirtan, Satsang, Mata ki Chouki, Shivcharcha, Sundarkand, and spiritual gatherings. Contact: +919322335235">
+  <meta name="keywords" content="Vasai Bhajan Mandali, Nalasopara Bhajan Mandali, Virar Bhajan Mandali, Shri Krishna Bhajan Mandli Maharashtra, Bhajan Sandhya Vasai, Kirtan Satsang Maharashtra, Mata ki Chouki Vasai, Sundarkand Vasai">
+  <meta name="author" content="Shri Krishna Bhajan Mandli">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; overflow-x: hidden; background: #fffaf0; }
+    /* Reset & box-sizing */
+    * { box-sizing: border-box; margin:0; padding:0; }
+    body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#fffdf9; color:#333; overflow-x:hidden; }
 
-    header {
-      background: #f4f4f4;
-      text-align: center;
-      padding: 20px;
+    /* Header */
+    header { background:#ff6600; color:white; padding:15px 20px; position:sticky; top:0; z-index:100; display:flex; align-items:center; justify-content:space-between; }
+    header h1 { font-size:22px; }
+    nav ul { list-style:none; display:flex; flex-wrap:wrap; }
+    nav ul li { position:relative; }
+    nav ul li a { color:white; padding:10px 15px; display:block; text-decoration:none; font-weight:500; }
+    nav ul li a:hover { background:#e65c00; border-radius:6px; }
+    nav ul li ul { display:none; position:absolute; background:#ff6600; top:40px; left:0; min-width:180px; border-radius:6px; overflow:hidden; }
+    nav ul li:hover ul { display:block; }
+    nav ul li ul li a { padding:10px; }
+
+    /* Hero */
+    .hero {
+      position: relative;
+      height: 80vh;
+      background: url('https://i.ibb.co/q9yXJ5v/artistic-krishna-wallpaper.jpg') center/cover no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 15px;
     }
-    header h1 { font-size: 28px; margin: 0; color: #b34d00; }
-
-    section { padding: 40px 15px; }
-
-    .services-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap: 15px; }
-
-    .service-card {
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-      border-top: 4px solid #ff9933;
-    }
-
-    button {
-      background: #ff6600;
+    .hero-overlay { position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); }
+    .hero-content {
+      position: relative;
       color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: background 0.3s ease;
+      text-align: center;
+      padding: 10px;
+      max-width: 600px;
     }
-    button:hover { background: #cc5200; }
+    .hero-content h1 { font-size: clamp(24px, 6vw, 48px); margin-bottom:15px; text-shadow:2px 2px 8px #000; }
+    .hero-content p { font-size: clamp(14px, 3vw, 20px); margin-bottom:25px; text-shadow:1px 1px 6px #000; }
+    .hero-content .btn { width:100%; max-width:250px; padding:12px 25px; font-size:16px; }
+
+    /* Sections */
+    section { padding:40px 10px; max-width:1200px; margin:auto; }
+    h2 { text-align:center; color:#ff6600; margin-bottom:20px; }
+
+    /* Services */
+    .services-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:15px; margin:0 auto; }
+    .service-card { background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); text-align:center; }
+    .service-card i { font-size:35px; color:#ff6600; margin-bottom:10px; }
+
+    /* Gallery */
+    .gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:10px; margin:0 auto; }
+    .gallery-grid img { width:100%; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.15); display:block; }
+
+    /* Testimonials */
+    .testimonial { background:#fff7f0; padding:20px; margin:15px 0; border-left:5px solid #ff6600; border-radius:8px; }
+    .testimonial p { margin:0 0 10px; }
+    .testimonial strong { color:#ff6600; }
+
+    /* Footer */
+    footer { background:#222; color:white; text-align:center; padding:20px; }
+
+    /* Buttons */
+    .btn { background:#ff6600; color:white; border:none; border-radius:8px; cursor:pointer; font-weight:600; transition:0.3s; }
+    .btn:hover { background:#e65c00; }
 
     /* Modal */
-    .modal {
-      display: none;
-      position: fixed; 
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.6);
-      justify-content: center; align-items: center;
-      z-index: 2000;
-    }
-    .modal-content {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      text-align: left;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-    }
-    .close { float: right; font-size: 22px; cursor: pointer; }
+    #eventFormModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:2000; }
+    .modal-content { background:#fff; padding:25px; border-radius:15px; width:95%; max-width:400px; animation:fadeIn 0.3s ease; position:relative; }
+    @keyframes fadeIn { from{opacity:0; transform:translateY(-20px);} to{opacity:1; transform:translateY(0);} }
+    .close { position:absolute; top:10px; right:15px; cursor:pointer; font-size:20px; color:#ff6600; }
+    input, select { width:100%; padding:10px; margin:8px 0 15px; border:1px solid #ccc; border-radius:8px; }
 
-    input, select {
-      width: 100%; padding: 10px; margin: 10px 0;
-      border: 1px solid #ccc; border-radius: 6px;
-    }
-
-    /* Success message animation */
-    @keyframes fadeInOut {
-      0% { opacity: 0; transform: translateY(20px); }
-      10% { opacity: 1; transform: translateY(0); }
-      90% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(20px); }
-    }
-    .success-msg {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: linear-gradient(135deg, #ff9933, #ffcc66);
-      color: white;
-      padding: 14px 28px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255,165,0,0.7);
-      font-weight: 600;
-      display: none;
-      z-index: 3000;
-      font-size: 16px;
-      text-align: center;
-      border: 2px solid #fff4d9;
-    }
-
+    /* Responsive */
     @media (max-width:768px){
-      .hero { height:60vh; }
-      .hero-content h1 { font-size:28px; }
-      .hero-content p { font-size:16px; }
+      .hero { height:60vh; padding:0 10px; }
+      .hero-content h1 { margin-bottom:10px; }
+      .hero-content p { margin-bottom:15px; }
+      .services-grid, .gallery-grid { gap:10px; }
+      section { padding:30px 10px; }
+      nav ul { flex-direction:column; }
     }
+
+    html { scroll-behavior:smooth; }
   </style>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>🌸 Shri Krishna Bhajan Mandli 🌸</h1>
+    <h1>🌸 Shri Krishna Bhajan Mandli</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services ▾</a>
+          <ul>
+            <li><a href="#services">Bhajan Sandhya</a></li>
+            <li><a href="#services">Kirtan & Satsang</a></li>
+            <li><a href="#services">Mata ki Chowki</a></li>
+            <li><a href="#services">Sundarkand</a></li>
+          </ul>
+        </li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#areas">Service Areas</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section id="about">
-    <h2>About</h2>
-    <p>We bring devotion and joy with soulful bhajans dedicated to Shri Krishna. Book us for your events and experience divine bliss.</p>
-  </section>
-
-  <section id="services">
-    <h2>Services</h2>
-    <div class="services-grid">
-      <div class="service-card">🎶 Bhajan Sandhya</div>
-      <div class="service-card">🙏 Kirtan</div>
-      <div class="service-card">🎉 Festival Programs</div>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <h1>Shri Krishna Bhajan Mandli</h1>
+      <p>Devotional Bhajans, Kirtans & Satsangs in Vasai–Virar–Nalasopara</p>
+      <button class="btn" id="bookBtn">Book Us for Event</button>
     </div>
   </section>
 
+  <!-- About -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+      Shri Krishna Bhajan Mandli is a devotional group from <strong>Vasai, Virar, Nalasopara</strong>, Maharashtra. 
+      We bring divine bliss through soulful Bhajans, Kirtans, Satsangs, and spiritual gatherings. 
+      With melodious voices and heartfelt devotion, we create an atmosphere of peace and spirituality at temples, homes, and community events.
+    </p>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-card"><i class="fa-solid fa-music"></i><h3>Bhajan Sandhya</h3></div>
+      <div class="service-card"><i class="fa-solid fa-dharmachakra"></i><h3>Kirtan & Satsang</h3></div>
+      <div class="service-card"><i class="fa-solid fa-hand-holding-heart"></i><h3>Mata ki Chowki</h3></div>
+      <div class="service-card"><i class="fa-solid fa-om"></i><h3>Shivcharcha</h3></div>
+      <div class="service-card"><i class="fa-solid fa-seedling"></i><h3>Awasani Mata Pooja</h3></div>
+      <div class="service-card"><i class="fa-solid fa-book-open"></i><h3>Sundarkand</h3></div>
+      <div class="service-card"><i class="fa-solid fa-people-group"></i><h3>Special Gatherings</h3></div>
+    </div>
+  </section>
+
+  <!-- Gallery -->
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://source.unsplash.com/600x400/?krishna,bhajan" alt="Bhajan Event">
+      <img src="https://source.unsplash.com/600x400/?temple,india" alt="Temple Program">
+      <img src="https://source.unsplash.com/600x400/?devotional,music" alt="Devotional Music">
+      <img src="https://source.unsplash.com/600x400/?indian,culture" alt="Cultural Event">
+    </div>
+  </section>
+
+  <!-- Service Areas -->
+  <section id="areas">
+    <h2>Service Areas</h2>
+    <p style="text-align:center; max-width:700px; margin:auto;">We proudly organize devotional events in the following regions of Maharashtra:</p>
+    <ul style="max-width:400px; margin:20px auto; line-height:1.8; font-size:18px;">
+      <li>🌸 Vasai</li>
+      <li>🌸 Virar</li>
+      <li>🌸 Nalasopara</li>
+      <li>🌸 Nearby areas of Palghar & Thane</li>
+    </ul>
+  </section>
+
+  <!-- Testimonials -->
+  <section id="testimonials">
+    <h2>Testimonials</h2>
+    <div class="testimonial">
+      <p>“Their bhajans filled our home with peace and positivity. Truly divine experience.”</p>
+      <strong>- Meera Sharma, Vasai</strong>
+    </div>
+    <div class="testimonial">
+      <p>“Excellent performance during our Mata ki Chowki. The whole mandli sang with such devotion.”</p>
+      <strong>- Rajesh Verma, Virar</strong>
+    </div>
+    <div class="testimonial">
+      <p>“They made our Sundarkand path unforgettable. Everyone felt spiritually uplifted.”</p>
+      <strong>- Kavita Joshi, Nalasopara</strong>
+    </div>
+  </section>
+
+  <!-- Contact -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>📞 9322335235 | 📧 Kavitashukla1059@gmail.com</p>
-    <button id="bookBtn">Book Now</button>
+    <p style="text-align:center;">📞 <b>+91 9322335235</b> | 📱 WhatsApp Available | 📧 kavitashukla1059@gmail.com</p>
   </section>
 
   <!-- Modal Form -->
-  <div id="eventFormModal" class="modal">
+  <div id="eventFormModal">
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
-      <h3>Book Event</h3>
+      <h2 style="text-align:center; color:#ff6600;">Book Your Event</h2>
       <form id="eventForm">
-        <input type="text" id="name" placeholder="Your Name" required>
-        <input type="text" id="phone" placeholder="Phone Number" required>
-        <input type="text" id="event" placeholder="Event Name" required>
-        <select id="category" required>
-          <option value="">Select Category</option>
-          <option value="Bhajan Sandhya">Bhajan Sandhya</option>
-          <option value="Kirtan">Kirtan</option>
-          <option value="Festival Program">Festival Program</option>
+        <input type="text" id="name" name="name" required placeholder="Enter your name">
+        <input type="tel" id="phone" name="phone" required placeholder="Enter phone number">
+        <input type="text" id="event" name="event" required value="Bhajan">
+        <select id="category" name="category" required>
+          <option value="" disabled selected>Select Category</option>
+          <option>Bhajan Sandhya</option>
+          <option>Kirtan & Satsang</option>
+          <option>Mata ki Chowki</option>
+          <option>Shivcharcha</option>
+          <option>Awasani Mata Pooja</option>
+          <option>Sundarkand</option>
+          <option>Special Gatherings</option>
         </select>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn" style="width:100%;">Submit</button>
       </form>
     </div>
   </div>
+
+  <footer>
+    <p>© 2025 Shri Krishna Bhajan Mandli | Vasai - Virar - Nalasopara, Maharashtra</p>
+  </footer>
 
   <script>
     const bookBtn = document.getElementById('bookBtn');
     const modal = document.getElementById('eventFormModal');
     const closeModal = document.getElementById('closeModal');
     const form = document.getElementById('eventForm');
-
-    // Success message div
-    const successMsg = document.createElement('div');
-    successMsg.className = "success-msg";
-    successMsg.textContent = "🌸 Thank you! Please confirm booking on WhatsApp.";
-    document.body.appendChild(successMsg);
-
-    // Success sound (soft ding, short base64 mp3)
-    const successSound = new Audio("data:audio/mp3;base64,SUQzAwAAAAAAF1RTU0UAAAAPAAADTGF2ZjU2LjMyLjEwMAAAAAAAAAAAAAAA//tQxAADBQBUZGF0YQAAAAA=");
 
     bookBtn.onclick = () => modal.style.display = 'flex';
     closeModal.onclick = () => modal.style.display = 'none';
@@ -168,26 +239,11 @@
       const phone = document.getElementById('phone').value;
       const eventName = document.getElementById('event').value;
       const category = document.getElementById('category').value;
-
       const message = `Booking Request:%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
       const whatsappNumber = '919322335235';
-
       window.open(`https://wa.me/${whatsappNumber}?text=${message}`, '_blank');
-
       modal.style.display = 'none';
       form.reset();
-
-      // Show success message
-      successMsg.style.display = "block";
-      successMsg.style.animation = "fadeInOut 4s ease forwards";
-
-      // Play ding sound
-      successSound.play().catch(err => console.log("Sound blocked until user interacts"));
-
-      // Hide after animation ends
-      setTimeout(() => {
-        successMsg.style.display = "none";
-      }, 4000);
     }
   </script>
 
