--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
       <img src="https://source.unsplash.com/600x400/?temple,india" alt="Temple Program">
       <img src="https://source.unsplash.com/600x400/?devotional,music" alt="Devotional Music">
       <img src="https://source.unsplash.com/600x400/?indian,culture" alt="Cultural Event">
+      <!-- Added Flute Image -->
+      <img src="https://i.ibb.co/0Q1B9Jp/flute-peacock.jpg" alt="Krishna Flute with Peacock Feather">
+      <!-- Added Krishna Images -->
+      <img src="https://source.unsplash.com/600x400/?lord,krishna" alt="Lord Krishna">
+      <img src="https://source.unsplash.com/600x400/?krishna,radha" alt="Radha Krishna">
+      <img src="https://source.unsplash.com/600x400/?krishna,flute" alt="Krishna Playing Flute">
+      <img src="https://source.unsplash.com/600x400/?krishna,temple" alt="Krishna Temple">
     </div>
   </section>
 
